# Multi_Agent_Chatbot

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml
assets/: Chatbot_conversation_CLI.txt  demo_questions.txt
data/in/: financials.csv
data/temp/: ingested.db
data/vectordb/: chroma.sqlite3
src/: chatbot.py
src/agents/: conversation.py  data_analyst.py  rag.py  supervisor.py
src/configs/: config.py
src/test/: agent_build.ipynb
src/tools/: rag_tools.py
src/utils/: agent_utils.py  data_cleaning.py  data_ingest_psql.py  data_ingest_sqlite.py  data_ingest_vectordb.py  prompts.py
test/: agent_build.ipynb
test/data/vectordb/: chroma.sqlite3
