[project]
name = "Multi_agent_Chatbot"
version = "0.1.0"
description = "Multi-agent chatbot using LangGraph containing Supervisor, Data analyst and conversation agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Frontend
    "streamlit",
    "streamlit-ace",
    "Pillow",

    # Backend
    "pandas",
    "pathlib",
    "PyYAML",
    "python-dotenv",
    "pydantic",
    "langchain",
    "langchain-ollama",
    "langchain-openai",
    "langchain_chroma",
	"langchain_community",
    "langchain-mcp-adapters",
    "mcp",
    "aiohttp",
    "typing-extensions",
	"grandalf",
]

authors = [
    {name = "Gaurav Sharma"},
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
StreamlitApp = "src.chatbot:main"

[project.urls]
Homepage = "https://github.com/gaurav00700/Multi_Agent_Chatbot.git"
Source = "https://github.com/gaurav00700/Multi_Agent_Chatbot.git"
Documentation = "https://github.com/gaurav00700/Multi_Agent_Chatbot.git"  # To be updated

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = []
exclude = ["assets*", "test*", ".env*"]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
